--- a/find.html
+++ b/find.html
@@ -32,7 +32,65 @@
             </span>
         </div>
     </header>
-
+    <main class="find">
+        <header class="find__header">
+            <ul class="find__header-list">
+                <li class="find__header-btn header-btn">
+                    <span class="header-btn__icon">
+                        <i class="fas fa-expand fa-2x"></i>
+                    </span>
+                    <span class="header-btn__title">
+                        QR code
+                    </span>
+                </li>
+                <li class="find__header-btn header-btn">
+                    <span class="header-btn__icon">
+                        <i class="far fa-address-book fa-2x"></i>
+                    </span>
+                    <span class="header-btn__title">
+                        Add by Contract
+                    </span>
+                </li>
+                <li class="find__header-btn header-btn">
+                    <span class="header-btn__icon">
+                        <i class="far fa-user-circle fa-2x"></i>
+                    </span>
+                    <span class="header-btn__title">
+                        Add by ID
+                    </span>
+                </li>
+                <li class="find__header-btn header-btn">
+                    <span class="header-btn__icon">
+                        <i class="far fa-envelope fa-2x"></i>
+                    </span>
+                    <span class="header-btn__title">
+                        Invite
+                    </span>
+                </li>
+            </ul>
+        </header>
+        <ul class="find__recommended">
+            <h5 class="find__title">
+                Recommended Friends
+            </h5>
+            <li class="find__friend friend">
+                <div class="friend__column">
+                    <img src="image/avatar.jpg" class="g-avatar friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            whatever
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <div class="friend__add-btn">
+                        <i class="fas fa-user-plus"></i>
+                    </div>
+                </div>
+            </li>
+            </div>
+        </ul>
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
