--- a/index.html
+++ b/index.html
@@ -34,7 +34,29 @@
             </span>
         </div>
     </header>
+    <main class="chats">
+        <ul class="chats__list">
+            <li class="chats__chat chat">
+                <div class="chat__column">
+                    <div class="chat__content">
+                        <img class="chat__avatar g-avatar" src="image/avatar.jpg">
+                        <i class="far fa-bell-slash"></i>
+                        <span class="chat__username">
+                            Lynn
+                        </span>
+                        <span class="chat__preview">
+                            Going home
+                        </span>
+                    </div>
+                </div>
+                <div class="chat__column">
+                    <span class="chat__timestamp">Yesterday</span>
+                </div>
+                
+            </li>
+        </ul>
 
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
@@ -45,7 +67,7 @@
 
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link" target="_blank">
-                    <i class="fas fa-comment"></i>
+                    <i class="fa fa-comment"></i>
                 </a>
             </li>
 
