--- a/more.html
+++ b/more.html
@@ -27,14 +27,89 @@
                 <i class="fas fa-search"></i>
             </span>
             <span class="header__icons">
-                <i class="far fa-comment"></i>
+                <i class="fas fa-qrcode"></i>
             </span>
             <span class="header__icons">
                 <i class="fas fa-cog"></i>
             </span>
         </div>
     </header>
+    <main class="More">
+        <header class="more__header">
+            <div class="more__header-main friend friend--lg">
+                <div class="friend__column">
+                    <img src="image/avatar.jpg" class="g-avatar friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            짱짱맨
+                        </span>
+                        <span class="friend__status">
+                            kimksjjm@gmail.com
+                         </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <i class="far fa-comment-alt fa-2x"></i>
+                </div>
+            </div>
 
+            <ul class="more__btn-list">
+                <li class="more__btn">
+                    <span class="more-btn__icon">
+                        <i class="far fa-grin-squint fa-2x"></i>
+                    </span>
+                    <span class="more-btn__title">
+                        Emoticon
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more-btn__icon">
+                        <i class="fas fa-palette fa-2x"></i>
+                    </span>
+                    <span class="more-btn__title">
+                        Themes
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more-btn__icon">
+                        <i class="fas fa-draw-polygon fa-2x"></i>
+                    </span>
+                    <span class="more-btn__title">
+                        Account
+                    </span>
+                </li>
+            </ul>
+        </header>
+        <section class="more__suggestions">
+            <h5 class="more__title">Suggestions</h5>
+            <ul class="more__suggestions-list">
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
+                        <i class="fas fa-quote-right fa-2x"></i>
+                    </span>
+                    <span class="suggestion__title">
+                        KaKao Story
+                    </span>
+                </li>
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
+                        <i class="far fa-grin-tongue fa-2x"></i>
+                    </span>
+                    <span class="suggestion__title">
+                        KaKao Friends
+                    </span>
+                </li>
+                <li class="more__suggestion suggestion">
+                    <span class="suggestion__icon">
+                        <i class="fas fa-gamepad fa-2x"></i>
+                    </span>
+                    <span class="suggestion__title">
+                        KaKao Game
+                    </span>
+                </li>
+            </ul>
+        </section>
+    </main>
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
