--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <main class="chats">
         <ul class="chats__list">
             <li class="chats__chat chat">
+             <a href="chat.html">
                 <div class="chat__column">
                     <div class="chat__content">
                         <img class="chat__avatar g-avatar" src="image/avatar.jpg">
@@ -52,7 +53,7 @@
                 <div class="chat__column">
                     <span class="chat__timestamp">Yesterday</span>
                 </div>
-                
+            </a>
             </li>
         </ul>
 
