--- a/chat.html
+++ b/chat.html
@@ -5,23 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat /KaKao_by jjm</title>
     <script src="https://kit.fontawesome.com/6452936803.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">13:54</span>
         </div>
-        <div class="status-bar__column"></div>
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-up"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-lever">35%</span>
-        <i class="fas fa-battery-quarter"></i>
+        <div class="status-bar__column">
+            <i class="fas fa-clock"></i>
+            <i class="fas fa-volume-up"></i>
+            <i class="fas fa-wifi"></i>
+            <span class="status-bar__battery-lever">35%</span>
+            <i class="fas fa-battery-quarter"></i>
+        </div>
     </div>
     <header class="header">
         <div class="header__header-column">
             <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
             <hi class="header__title">Best Friend</hi>
         </div>
@@ -29,9 +31,9 @@
             <span class="header__icons">
                 <i class="fas fa-search"></i>
             </span>
-            <div class="header__icon">
+            <span class="header__icons">
                 <i class="fas fa-bars"></i>
-            </div>
+            </span>
         </div>
     </header>
     <main class="chat">
