--- a/find.html
+++ b/find.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find/KaKao_by jjm</title>
     <script src="https://kit.fontawesome.com/6452936803.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">13:54</span>
         </div>
-        <div class="status-bar__column"></div>
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-up"></i>
-        <i class="fas fa-wifi"></i>
-        <span class="status-bar__battery-lever">35%</span>
-        <i class="fas fa-battery-quarter"></i>
+        <div class="status-bar__column">
+            <i class="fas fa-clock"></i>
+            <i class="fas fa-volume-up"></i>
+            <i class="fas fa-wifi"></i>
+            <span class="status-bar__battery-lever">35%</span>
+            <i class="fas fa-battery-quarter"></i>
+        </div>
     </div>
     <header class="header">
         <div class="header__header-column">
@@ -94,25 +96,25 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__list-item">
-                <a href="friends.html" class="nav__list-link" target="_blank">
+                <a href="friends.html" class="nav__list-link">
                     <i class="far fa-user"></i>
                 </a>
             </li>
 
             <li class="nav__list-item">
-                <a href="index.html" class="nav__list-link" target="_blank">
+                <a href="index.html" class="nav__list-link">
                     <i class="far fa-comment"></i>
                 </a>
             </li>
 
             <li class="nav__list-item">
-                <a href="find.html" class="nav__list-link" target="_blank">
+                <a href="find.html" class="nav__list-link">
                     <i class="fas fa-search"></i>
                 </a>
             </li>
 
             <li class="nav__list-item">
-                <a href="more.html" class="nav__list-link" target="_blank">
+                <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
