--- a/chat.html
+++ b/chat.html
@@ -52,7 +52,7 @@
                 <span class="message__timestamp"></span>
             </li>
 
-            <li class="incoming-message mwssage">
+            <li class="incoming-message massage">
                 <span class="message__timestamp"></span>
                     <div class="message__bubble">
                         this is massege from me!! thank you
