--- a/friends.html
+++ b/friends.html
@@ -35,7 +35,7 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
                     <img src="image/avatar.jpg" class="g-avatar friend__avatar">
                     <div class="friend__content">
@@ -44,16 +44,15 @@
                         </span>
                         <span class="friend__status">
                             안녕
-                         </span>
+                        </span>
                     </div>
                 </div>
             </div>
-        </header>
         <div class="friends__plus">
             <h5 class="friends__plus-title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="image/avatar.jpg" class="g-avatar friend__avatar">
+                    <img src="image/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -62,14 +61,18 @@
                 </div>
             </div>
         </div>
+
         <ul class="friends__list">
             <h5 class="friends__title"> Friends 14</h5>
             <li class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="image/avatar.jpg" class="g-avatar friend__avatar">
+                    <img src="image/avatar.jpg" class=" friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            whatever
+                            nicolas
+                        </span>
+                        <span class="friend__status">
+                            perfecto!
                         </span>
                     </div>
                 </div>
@@ -81,6 +84,7 @@
                 </div>
             </li>
         </ul>
+    </header>
     </main>
     <nav class="nav">
         <ul class="nav__list">
