--- a/more.html
+++ b/more.html
@@ -42,7 +42,7 @@
         <header class="more__header">
             <div class="more__header-main friend friend--lg">
                 <div class="friend__column">
-                    <img src="image/avatar.jpg" class="g-avatar friend__avatar">
+                    <img src="image/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             짱짱맨
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="friend__column">
-                    <i class="far fa-comment-alt fa-2x"></i>
+                    <i class="far fa-list-alt fa-2x"></i>
                 </div>
             </div>
 
