--- a/find.html
+++ b/find.html
@@ -77,7 +77,7 @@
             </h5>
             <li class="find__friend friend">
                 <div class="friend__column">
-                    <img src="image/avatar.jpg" class="g-avatar friend__avatar">
+                    <img src="image/avatar.jpg" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             whatever
