--- a/index.html
+++ b/index.html
@@ -40,20 +40,25 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
              <a href="chat.html">
-                <div class="chat__column">
-                    <div class="chat__content">
-                        <img class="chat__avatar g-avatar" src="image/avatar.jpg">
-                        <i class="far fa-bell-slash"></i>
-                        <span class="chat__username">
-                            Lynn
-                        </span>
-                        <span class="chat__preview">
-                            Going home
-                        </span>
+                <div class="chats__chat friend friend--lg">
+                    <div class="friend__column">
+                        <img src="image/avatar.jpg" class="m-avatar friend__avatar">
+                        <div class="friend__content">
+                            <span class="friend__name">
+                                jjm
+                            </span>
+                            <span class="friend__bottom-text">
+                                hello! this is jjm :)
+                            </span>
+                        </div>
                     </div>
-                </div>
-                <div class="chat__column">
-                    <span class="chat__timestamp">Yesterday</span>
+                    <div class="friend__column">
+                        <div class="friend__friend">
+                            <span class="chat__timestamp">
+                                March 8
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </a>
             </li>
